# version-consts-git

./: Cargo.toml
examples/: demo.rs
impl/: Cargo.toml
impl/src/: lib.rs
src/: errors.rs  lib.rs
