[package]
name = "version-consts-git"
version = "0.1.2"
authors = ["Benjamin Saunders <ben.e.saunders@gmail.com>"]
description = "Code generation for compiling in information about a crate's git status"
repository = "https://github.com/Ralith/version-consts-git"
license = "Apache-2.0"
keywords = ["git", "version"]

[dependencies]
error-chain = "0.5"

[dependencies.git2]
version = "0.6"
default-features = false
