[package]
name = "version-consts-git-impl"
version = "0.1.1"
authors = ["Benjamin Saunders <ben.e.saunders@gmail.com>"]
description = "Implementation detail of version-consts-git"
repository = "https://github.com/Ralith/version-consts-git"
license = "MIT OR Apache-2.0"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
quote = "0.6.11"
proc-macro2 = "0.4.27"
proc-macro-hack = "0.5.4"
git2 = { version = "0.9", default-features = false }
